Regression: Strokes are not responding to selection/deselection in vertex groups #127342

Closed
opened 2024-09-09 12:54:30 +02:00 by Rik Schutte · 1 comment

System Information
Operating system: Linux-6.8.12-gentoo-x86_64-AMD_Ryzen_9_3900X_12-Core_Processor-with-glibc2.39 64 Bits, X11 UI
Graphics card: AMD Radeon RX 6700 XT (radeonsi, navi22, LLVM 17.0.6, DRM 3.57, 6.8.12-gentoo) AMD 4.6 (Core Profile) Mesa 24.1.1

Blender Version
Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-08 20:54, hash: 1bc0ec1b80a1
Worked: 4.2 (GPV2)

Short description of error
When I assign points (edit mode) to a vertex group, i can select/deselect them with the vertex group select/deselect buttons. (yay!) However it only seem to work for points. When i switch to 'strokes' instead of points, they don't get selected/deselected even though they are stored in the vertex group. Falk mentioned this might be a bug?

Exact steps for others to reproduce the error
Create a Grease Pencil 'Stroke' object.
Create a new vertex group in the Grease Pencil object.
Go to edit mode
Enable 'stroke' selection
Select strokes in edit mode.
Assign selection to the new vertex group.
Try and select/deselect the strokes by using the buttons in the vertex group panel.
This only works when 'points' selection is enabled.

[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Linux-6.8.12-gentoo-x86_64-AMD_Ryzen_9_3900X_12-Core_Processor-with-glibc2.39 64 Bits, X11 UI Graphics card: AMD Radeon RX 6700 XT (radeonsi, navi22, LLVM 17.0.6, DRM 3.57, 6.8.12-gentoo) AMD 4.6 (Core Profile) Mesa 24.1.1 **Blender Version** Broken: version: 4.3.0 Alpha, branch: main, commit date: 2024-09-08 20:54, hash: `1bc0ec1b80a1` Worked: 4.2 (GPV2) **Short description of error** When I assign points (edit mode) to a vertex group, i can select/deselect them with the vertex group select/deselect buttons. (yay!) However it only seem to work for points. When i switch to 'strokes' instead of points, they don't get selected/deselected even though they are stored in the vertex group. Falk mentioned this might be a bug? **Exact steps for others to reproduce the error** Create a Grease Pencil 'Stroke' object. Create a new vertex group in the Grease Pencil object. Go to edit mode Enable 'stroke' selection Select strokes in edit mode. Assign selection to the new vertex group. Try and select/deselect the strokes by using the buttons in the vertex group panel. This only works when 'points' selection is enabled. [Based on the default startup or an attached .blend file (as simple as possible)]
Rik Schutte added the
Severity
Normal
Status
Needs Triage
Type
Bug
labels 2024-09-09 12:54:30 +02:00
Richard Antalik added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2024-09-09 21:38:11 +02:00

Will confirm, since this works with mesh

Will confirm, since this works with mesh
Richard Antalik added
Severity
High
and removed
Severity
Normal
labels 2024-09-09 22:14:21 +02:00
Richard Antalik changed title from Grease Pencil 3: Strokes (edit mode) are not responding to selection/deselection in vertex groups to Regression: Strokes are not responding to selection/deselection in vertex groups 2024-09-09 22:15:00 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-09-19 11:00:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#127342
No description provided.