source/blender/blenkernel/BKE_grease_pencil_vertex_groups.hh
@@ -11,6 +11,8 @@
 
 #include "DNA_grease_pencil_types.h"
 
+#include "BKE_attribute.hh"
+
 namespace blender::bke::greasepencil {
 
 /** Make sure drawings only contain vertex groups of the #GreasePencil. */
@@ -37,6 +39,9 @@ bool remove_from_vertex_group(GreasePencil &grease_pencil, StringRef name, bool 
 void clear_vertex_groups(GreasePencil &grease_pencil);
 
 /** Select or deselect vertices assigned to this group. */
-void select_from_group(GreasePencil &grease_pencil, StringRef name, bool select);
+void select_from_group(GreasePencil &grease_pencil,
+                       const AttrDomain selection_domain,
+                       StringRef name,
+                       bool select);
 
 }  // namespace blender::bke::greasepencil
