source/blender/blenkernel/intern/grease_pencil_vertex_groups.cc
@@ -195,7 +195,10 @@ void clear_vertex_groups(GreasePencil &grease_pencil)
   }
 }
 
-void select_from_group(GreasePencil &grease_pencil, const StringRef name, const bool select)
+void select_from_group(GreasePencil &grease_pencil,
+                       const AttrDomain selection_domain,
+                       const StringRef name,
+                       const bool select)
 {
   for (GreasePencilDrawingBase *base : grease_pencil.drawings()) {
     if (base->type != GP_DRAWING) {
@@ -213,21 +216,51 @@ void select_from_group(GreasePencil &grease_pencil, const StringRef name, const 
     }
 
     const Span<MDeformVert> dverts = curves.deform_verts_for_write();
-    if (!dverts.is_empty()) {
-      bke::MutableAttributeAccessor attributes = curves.attributes_for_write();
-      SpanAttributeWriter<bool> selection = attributes.lookup_or_add_for_write_span<bool>(
-          ".selection",
-          bke::AttrDomain::Point,
-          AttributeInitVArray(VArray<bool>::ForSingle(true, curves.point_num)));
+    if (dverts.is_empty()) {
+      continue;
+    }
 
-      for (const int i : selection.span.index_range()) {
-        if (BKE_defvert_find_index(&dverts[i], def_nr)) {
-          selection.span[i] = select;
-        }
+    MutableAttributeAccessor attributes = curves.attributes_for_write();
+    const int num_elements = attributes.domain_size(selection_domain);
+    SpanAttributeWriter<bool> selection = attributes.lookup_or_add_for_write_span<bool>(
+        ".selection",
+        selection_domain,
+        bke::AttributeInitVArray(VArray<bool>::ForSingle(true, num_elements)));
+
+    switch (selection_domain) {
+      case AttrDomain::Point:
+        threading::parallel_for(curves.points_range(), 4096, [&](const IndexRange range) {
+          for (const int point_i : range) {
+            if (BKE_defvert_find_index(&dverts[point_i], def_nr)) {
+              selection.span[point_i] = select;
+            }
+          }
+        });
+        break;
+      case AttrDomain::Curve: {
+        const OffsetIndices<int> points_by_curve = curves.points_by_curve();
+        threading::parallel_for(curves.curves_range(), 1024, [&](const IndexRange range) {
+          for (const int curve_i : range) {
+            const IndexRange points = points_by_curve[curve_i];
+            bool any_point_selected = false;
+            for (const int point_i : points) {
+              if (BKE_defvert_find_index(&dverts[point_i], def_nr)) {
+                any_point_selected = true;
+                break;
+              }
+            }
+            selection.span[curve_i] = any_point_selected;
+          }
+        });
+        break;
       }
 
-      selection.finish();
+      default:
+        BLI_assert_unreachable();
+        break;
     }
+
+    selection.finish();
   }
 }
 
